--- a/springbootdemo2/pom.xml
+++ b/springbootdemo2/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>vw.him.springboot</groupId>
-	<artifactId>springbootdemo1</artifactId>
+	<artifactId>springbootdemo2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springbootdemo1</name>
+	<name>springbootdemo2</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -32,6 +32,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<!--<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
