--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=currency-exchange
 server.port=8000
+eureka.instance.hostname=localhost
  
 spring.jpa.show-sql=true
 #none,validate,create,create-drop,update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/microservice
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/microservice
 spring.datasource.username=root
